add sample MNIST networks

--- a/samples/python/mnist/MNISTStochasticLutSimpleResNet.ipynb
+++ b/samples/python/mnist/MNISTStochasticLutSimpleResNet.ipynb
@@ -17,7 +17,9 @@
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "\n",
-    "import binarybrain as bb\n"
+    "import binarybrain as bb\n",
+    "from binarybrain.frame_buffer import FrameBuffer\n",
+    "import binarybrain.core as core\n"
    ]
   },
   {
@@ -27,17 +29,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define resnet block\n",
-    "def ResidualXorBlock(lut1, lut2):\n",
-    "    main_path= bb.Sequential([\n",
-    "        bb.Convolution2d(lut1, filter_size=(3,3)),\n",
-    "        bb.Convolution2d(lut2, filter_size=(3,3))\n",
-    "    ])\n",
+    "class ResidualXorBlock(bb.Sequential):\n",
     "\n",
-    "    return bb.Xor([\n",
-    "        main_path, #output of conv layers\n",
-    "        bb.PassThrough()  #identity skip connection\n",
-    "    ])"
+    "    def __init__(self, sub_layer, filter_size=(1,1), stride=(1,1), input_shape=None, padding='valid', border_mode='reflect_101', border_value=0.0, name=None,fw_dtype=bb.DType.FP32, bw_dtype=bb.DType.FP32):\n",
+    "        self.fw_dtype = fw_dtype\n",
+    "        self.bw_dtype = bw_dtype\n",
+    "\n",
+    "        self.shapes = []\n",
+    "        self.identity = Identity()\n",
+    "        self.sub_layer    = sub_layer\n",
+    "        self.im2col = ConvolutionIm2Col(filter_size=filter_size, stride=stride, padding=padding,border_mode=border_mode, border_value=border_value,fw_dtype=fw_dtype, bw_dtype= bw_dtype)\n",
+    "        self.col2im = ConvolutionCol2Im(fw_dtype=fw_dtype, bw_dtype=bw_dtype)\n",
+    "\n",
+    "        model_list = [self.identity, self.im2col, self.sub_layer, self.col2im]\n",
+    "\n",
+    "\n",
+    "    def get_core(self):\n",
+    "        core_creator = search_core_model('ResidualXorBlock', [self.fw_dtype, self.bw_type]).create\n",
+    "        core_model = core_creator(self.identity.get_core(), self.im2col.get_core(), self.sub_layer.get_core(), self.col2im.get_core())\n",
+    "        if self.name is not None:\n",
+    "            core_model.set_name(self.name)\n",
+    "        return core_model\n",
+    "\n",
+    "    def get_sub_layer(self):\n",
+    "        return self.sub_layer\n",
+    "\n",
+    "    def set_input_shape(self, shape):\n",
+    "        self.input_shape = shape\n",
+    "\n",
+    "    def \n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "        \n",
+    "    FrameBuffer lut1;\n",
+    "    FrameBuffer lut2;\n",
+    "\n",
+    "    public:\n",
+    "    \n",
+    "    FrameBuffer ResidualXorBlock(lut1, lut2){\n",
+    "        self.lut1 = lut1\n",
+    "        self.lut2 = lut2\n",
+    "    }\n",
+    "\n",
+    "    def Xor\n",
+    "\n",
+    "\n",
+    "}\n",
+    "\n",
+    "conv_block = bb.Sequential([bb.Sequential([\n",
+    "    bb.Convolution2d(lut1, filter_size=(3, 3), padding='same'),\n",
+    "    bb.Convolution2d(lut2, filter_size=(3, 3), padding='same'),\n",
+    "    bb.StochasticMaxPooling(filter_size=(2, 2)),\n",
+    "    bb.RealToBinary()\n",
+    "]),\n",
+    "    bb.Sequential([\n",
+    "    bb.Identity(),\n",
+    "    bb.Convolution2d(lut2, filter_size=(3,3), padding='same'),\n",
+    "    bb.RealToBinary()\n",
+    "    ]),\n",
+    "                            \n",
+    "                            \n",
+    "   \n",
+    "conv_block.set_input_shape([1, 28, 28])\n",
+    "identity_block = \n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    identity_block.set_input_shape([1, 28, 28])\n",
+    "\n",
+    "    conv_input_buffer = conv_block.forward(input_buf)      # FrameBuffer\n",
+    "\n",
+    "    identity_input_buffer = identity_block.forward(input_buf)  # FrameBuffer\n",
+    "    return bb.Xor(conv_input_buffer,identity_input_buffer)\n",
+    "    "
    ]
   },
   {
@@ -73,13 +141,13 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'in1' is not defined",
+     "evalue": "name 'bb' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 21\u001b[0m\n\u001b[1;32m     16\u001b[0m lut_layer4_1 \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mDifferentiableLut([\u001b[38;5;241m420\u001b[39m], batch_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, binarize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     17\u001b[0m lut_layer4_2 \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mDifferentiableLut([\u001b[38;5;241m70\u001b[39m], batch_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, binarize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 21\u001b[0m out1 \u001b[38;5;241m=\u001b[39m lut_layer0_0\u001b[38;5;241m.\u001b[39mforward(\u001b[43min1\u001b[49m, train\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m#xor_result = ResidualXorBlock(lut_layer0_0, lut_layer1_0)\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;124;03m'''net = bb.Sequential([\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;124;03m            bb.Sequential([\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;124;03m                bb.Convolution2d(bb.Sequential([lut_layer0_0, lut_layer0_1]), filter_size=(3, 3)),\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;124;03m        ])\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;124;03m        '''\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'in1' is not defined"
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# define residual network(resnet)\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m lut_layer0_0 \u001b[38;5;241m=\u001b[39m \u001b[43mbb\u001b[49m\u001b[38;5;241m.\u001b[39mDifferentiableLut([\u001b[38;5;241m192\u001b[39m], batch_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, binarize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m lut_layer0_1 \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mDifferentiableLut([\u001b[38;5;241m32\u001b[39m], batch_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, binarize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      6\u001b[0m lut_layer1_0 \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mDifferentiableLut([\u001b[38;5;241m192\u001b[39m], batch_norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, binarize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bb' is not defined"
      ]
     }
    ],
@@ -102,56 +170,46 @@
     "lut_layer4_1 = bb.DifferentiableLut([420], batch_norm=False, binarize=False)\n",
     "lut_layer4_2 = bb.DifferentiableLut([70], batch_norm=False, binarize=False)\n",
     "\n",
-    "\n",
-    "\n",
-    "out1 = lut_layer0_0.forward(in1, train=True)\n",
-    "\n",
-    "\n",
-    "#xor_result = ResidualXorBlock(lut_layer0_0, lut_layer1_0)\n",
-    "\n",
-    "'''net = bb.Sequential([\n",
+    "net = bb.Sequential([\n",
     "            bb.Sequential([\n",
     "                bb.Convolution2d(bb.Sequential([lut_layer0_0, lut_layer0_1]), filter_size=(3, 3)),\n",
     "                bb.Convolution2d(bb.Sequential([lut_layer1_0, lut_layer1_1]), filter_size=(3, 3)),\n",
-    "                bb.StochasticMaxPooling(filter_size=(2, 2)),\n",
+    "                bb.ResidualXorBlock(lut_layer0_0, lut_layer0_1)\n",
     "            ]),\n",
     "            bb.Sequential([\n",
     "                bb.Convolution2d(bb.Sequential([lut_layer2_0, lut_layer2_1]), filter_size=(3, 3)),\n",
     "                bb.Convolution2d(bb.Sequential([lut_layer3_0, lut_layer3_1]), filter_size=(3, 3)),\n",
-    "                bb.StochasticMaxPooling(filter_size=(2, 2)),\n",
+    "                bb.ResidualXorBlock(lut_layer2_0, lut_layer2_1)\n",
     "            ]),\n",
+    "            \n",
     "            bb.Sequential([\n",
     "                bb.Convolution2d(bb.Sequential([lut_layer4_0, lut_layer4_1, lut_layer4_2]),\n",
     "                                    filter_size=(4, 4)),\n",
     "            ]),\n",
     "            bb.Reduce([10])\n",
     "        ])\n",
-    "        '''\n",
-    "\n",
     "\n",
     "net.set_input_shape([1, 28, 28])\n",
-    "\n",
     "net.send_command(\"binary false\")      \n",
     "net.send_command(\"lut_binarize true\")  \n",
-    "\n",
-    "#print(net.get_info())\n"
+    "print(net.get_info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "baf036e5-7f52-4984-af8b-5e542075dc24",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'net' is not defined",
+     "evalue": "name 'bb' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m metrics   \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mMetricsCategoricalAccuracy()\n\u001b[1;32m      6\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mOptimizerAdam()\n\u001b[0;32m----> 8\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mset_variables(\u001b[43mnet\u001b[49m\u001b[38;5;241m.\u001b[39mget_parameters(), net\u001b[38;5;241m.\u001b[39mget_gradients())\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs):\n\u001b[1;32m     11\u001b[0m     loss\u001b[38;5;241m.\u001b[39mclear()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'net' is not defined"
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#bb.load_networks(data_path, net)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# learning\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m loss      \u001b[38;5;241m=\u001b[39m \u001b[43mbb\u001b[49m\u001b[38;5;241m.\u001b[39mLossSoftmaxCrossEntropy()\n\u001b[1;32m      5\u001b[0m metrics   \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mMetricsCategoricalAccuracy()\n\u001b[1;32m      6\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mOptimizerAdam()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bb' is not defined"
      ]
     }
    ],
@@ -205,19 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "0f2b9e6c-82d0-4d6b-9d87-d1ae92af4947",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'net' is not defined",
+     "evalue": "name 'output_velilog_file' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_velilog_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      3\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m`timescale 1ns / 1ps\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(bb\u001b[38;5;241m.\u001b[39mmake_verilog_lut_cnv_layers(rtl_module_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCnv0\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mnet\u001b[49m[\u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m      5\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(bb\u001b[38;5;241m.\u001b[39mmake_verilog_lut_cnv_layers(rtl_module_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCnv1\u001b[39m\u001b[38;5;124m'\u001b[39m, net[\u001b[38;5;241m1\u001b[39m]))\n\u001b[1;32m      6\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(bb\u001b[38;5;241m.\u001b[39mmake_verilog_lut_cnv_layers(rtl_module_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCnv2\u001b[39m\u001b[38;5;124m'\u001b[39m, net[\u001b[38;5;241m2\u001b[39m]))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'net' is not defined"
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# export verilog\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43moutput_velilog_file\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      3\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m`timescale 1ns / 1ps\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(bb\u001b[38;5;241m.\u001b[39mmake_verilog_lut_cnv_layers(rtl_module_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCnv0\u001b[39m\u001b[38;5;124m'\u001b[39m, net[\u001b[38;5;241m0\u001b[39m]))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'output_velilog_file' is not defined"
      ]
     }
    ],
@@ -229,13 +287,13 @@
     "    f.write(bb.make_verilog_lut_cnv_layers(rtl_module_name + 'Cnv1', net[1]))\n",
     "    f.write(bb.make_verilog_lut_cnv_layers(rtl_module_name + 'Cnv2', net[2]))\n",
     "\n",
-    "# Simulation用ファイルに上書きコピー\n",
+    "# Simulation\n",
     "shutil.copyfile(output_velilog_file, sim_velilog_file)\n",
     "\n",
-    "# Simulationで使う画像の生成\n",
+    "# Simulation\n",
     "def img_geneator():\n",
     "    for data in dataset_test:\n",
-    "        yield data[0] # 画像とラベルの画像の方を返す\n",
+    "        yield data[0] \n",
     "\n",
     "img = (bb.make_image_tile(480//28+1, 640//28+1, img_geneator())*255).astype(np.uint8)\n",
     "bb.write_ppm(os.path.join(rtl_sim_path, 'mnist_test_160x120.ppm'), img[:,:120,:160])\n",
@@ -244,30 +302,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "37c92bfc-227a-4347-b96b-c145c0cf2b2b",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'net' is not defined",
+     "evalue": "name 'bb' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 学習したモデルを読み込み(念のため)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m bb\u001b[38;5;241m.\u001b[39mload_networks(data_path, \u001b[43mnet\u001b[49m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# LUTモデルは BIT型を使ってメモリ節約が可能\u001b[39;00m\n\u001b[1;32m      5\u001b[0m bin_dtype \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mDType\u001b[38;5;241m.\u001b[39mBIT  \u001b[38;5;66;03m# bb.DType.BIT or bb.DType.FP32\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'net' is not defined"
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbb\u001b[49m\u001b[38;5;241m.\u001b[39mload_networks(data_path, net)\n\u001b[1;32m      3\u001b[0m bin_dtype \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mDType\u001b[38;5;241m.\u001b[39mBIT  \u001b[38;5;66;03m# bb.DType.BIT or bb.DType.FP32\u001b[39;00m\n\u001b[1;32m      6\u001b[0m bin_lut0_0 \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mBinaryLut\u001b[38;5;241m.\u001b[39mfrom_sparse_model(lut_layer0_0, fw_dtype\u001b[38;5;241m=\u001b[39mbin_dtype)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bb' is not defined"
      ]
     }
    ],
    "source": [
-    "# 学習したモデルを読み込み(念のため)\n",
     "bb.load_networks(data_path, net)\n",
     "\n",
-    "# LUTモデルは BIT型を使ってメモリ節約が可能\n",
     "bin_dtype = bb.DType.BIT  # bb.DType.BIT or bb.DType.FP32\n",
     "\n",
-    "# 同一形状のバイナリLUTを生成\n",
+    "\n",
     "bin_lut0_0 = bb.BinaryLut.from_sparse_model(lut_layer0_0, fw_dtype=bin_dtype)\n",
     "bin_lut0_1 = bb.BinaryLut.from_sparse_model(lut_layer0_1, fw_dtype=bin_dtype)\n",
     "bin_lut1_0 = bb.BinaryLut.from_sparse_model(lut_layer1_0, fw_dtype=bin_dtype)\n",
@@ -280,7 +336,7 @@
     "bin_lut4_1 = bb.BinaryLut.from_sparse_model(lut_layer4_1, fw_dtype=bin_dtype)\n",
     "bin_lut4_2 = bb.BinaryLut.from_sparse_model(lut_layer4_2, fw_dtype=bin_dtype)\n",
     "\n",
-    "# テスト用ネットワーク構築\n",
+    "\n",
     "frame_modulation_size = 7\n",
     "\n",
     "test_net = bb.Sequential([\n",
@@ -299,7 +355,6 @@
     "\n",
     "#print(test_net.get_info())\n",
     "\n",
-    "# 推論評価\n",
     "test_loss    = bb.LossSoftmaxCrossEntropy()\n",
     "test_metrics = bb.MetricsCategoricalAccuracy()\n",
     "\n",
